Relax version of deal.II. 8.5 is sufficient.

--- a/bp1/CMakeLists.txt
+++ b/bp1/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##
-#  CMake script for the step-3 tutorial program:
+#  CMake script copied from the step-3 tutorial program of deal.II:
 ##
 
 # Set the name of the project and target:
@@ -23,7 +23,7 @@ SET(TARGET_SRC
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 
-FIND_PACKAGE(deal.II 9.0.0 QUIET
+FIND_PACKAGE(deal.II 8.5.0 QUIET
   HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR}
   )
 IF(NOT ${deal.II_FOUND})
