--- a/bp2/CMakeLists.txt
+++ b/bp2/CMakeLists.txt
@@ -3,7 +3,7 @@
 ##
 
 # Set the name of the project and target:
-SET(TARGET "bench_mass")
+SET(TARGET "bench")
 
 # Declare all source files the target consists of. Here, this is only
 # the one step-X.cc file, but as you expand your project you may wish
@@ -44,6 +44,7 @@ Error! The deal.II library found at ${DEAL_II_PATH} was not configured with
 It was set to OFF in your installation but is required for this program."
     )
 ENDIF()
+
 
 DEAL_II_INITIALIZE_CACHED_VARIABLES()
 PROJECT(${TARGET})
