Move test and duplicate it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,5 +48,7 @@ ADD_SUBDIRECTORY(bp3)
 ADD_SUBDIRECTORY(bp4)
 ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
-ADD_SUBDIRECTORY(sm-update)
+ADD_SUBDIRECTORY(sm-update-1)
+ADD_SUBDIRECTORY(sm-update-2)
+
 
