--- a/sm-update-2/CMakeLists.txt
+++ b/sm-update-2/CMakeLists.txt
@@ -4,3 +4,11 @@ ADD_EXECUTABLE( "sm-update-2" ${TARGET_SRC})
 DEAL_II_SETUP_TARGET("sm-update-2")
 set_target_properties("sm-update-2" PROPERTIES OUTPUT_NAME "bench")
 TARGET_LINK_LIBRARIES("sm-update-2" "ceed")
+
+FIND_LIBRARY(LIKWID likwid HINTS $ENV{LIKWID_LIB})
+
+IF(LIKWID)
+  TARGET_COMPILE_DEFINITIONS("sm-update-2" PUBLIC LIKWID_PERFMON)
+  TARGET_INCLUDE_DIRECTORIES("sm-update-2" PUBLIC $ENV{LIKWID_INCLUDE})
+  TARGET_LINK_LIBRARIES("sm-update-2" ${LIKWID})
+ENDIF()
