--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ ADD_SUBDIRECTORY(bp1)
 ADD_SUBDIRECTORY(bp2)
 ADD_SUBDIRECTORY(bp3)
 ADD_SUBDIRECTORY(bp4)
+ADD_SUBDIRECTORY(bp4_system)
 ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
 
