Add to benchmarks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,5 +49,5 @@ ADD_SUBDIRECTORY(bp4)
 ADD_SUBDIRECTORY(bp4_system)
 ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
-
+ADD_SUBDIRECTORY(benchmark_detail)
 
