Add BK5 benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ ADD_SUBDIRECTORY(bp2)
 ADD_SUBDIRECTORY(bp3)
 ADD_SUBDIRECTORY(bp4)
 ADD_SUBDIRECTORY(bp4_system)
+ADD_SUBDIRECTORY(bk5)
 ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
 ADD_SUBDIRECTORY(benchmark_detail)
