--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,13 +42,14 @@ DEAL_II_INITIALIZE_CACHED_VARIABLES()
 
 DEAL_II_SETUP_TARGET(ceed)
 
+ADD_SUBDIRECTORY(bk5)
 ADD_SUBDIRECTORY(bp1)
 ADD_SUBDIRECTORY(bp2)
 ADD_SUBDIRECTORY(bp3)
 ADD_SUBDIRECTORY(bp4)
 ADD_SUBDIRECTORY(bp4_system)
-ADD_SUBDIRECTORY(bk5)
 ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
 ADD_SUBDIRECTORY(benchmark_detail)
+ADD_SUBDIRECTORY(bps5)
 
