Add (slow) implementation of E-vector version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,4 +52,4 @@ ADD_SUBDIRECTORY(bp5)
 ADD_SUBDIRECTORY(bp6)
 ADD_SUBDIRECTORY(benchmark_detail)
 ADD_SUBDIRECTORY(bps5)
-
+ADD_SUBDIRECTORY(bps5_e-vector)
